@@ -4,6 +4,9 @@ parts =
     gae_tools
     app_lib
 
+develop =
+    ../../
+
 # Generate relative paths for eggs so that the buildout can be moved around.
 relative-paths = true
 
